test/syntax-errors/tests/index.ts
'use strict';

describe('Test suite #1', () => {
    it('should do smth', () => {});
});
